Implement/fix drag and drop handling of text & url in the webview

BUG:254102